fix: https적용에 따른 swagger설정 추가